--- a/index.html
+++ b/index.html
@@ -12,22 +12,35 @@
       <header>
         <h1>Password Generator</h1>
       </header>
-      <div class="card">
-        <div class="card-header">
+      <main class="card">
+        <section class="card-header">
           <h2>Generate a Password</h2>
-        </div>
-        <div class="card-body">
-          <textarea
+        </section>
+        <section class="card-body">
+          <div id="password">
+            <textarea
             readonly
-            id="password"
             placeholder="Your Secure Password"
             aria-label="Generated Password"
-          ></textarea>
-        </div>
-        <div class="card-footer">
+            ></textarea>
+            <form id="form">
+              <label for="chartype1"> Length</label>
+              <input type="number" name="chartype1" value="Length"><br> 
+              <label for="chartype2"> Uppercase</label>
+              <input type="checkbox" name="chartype2" value="Uppercase"><br>
+              <label for="chartype3"> Lowercase</label>
+              <input type="checkbox" name="chartype3" value="Lowercase"><br>
+              <label for="chartype4"> Numbers</label>
+              <input type="checkbox" name="chartype4" value="Numbers"><br>
+              <label for="chartype5"> Symbols</label>
+              <input type="checkbox" name="chartype5" value="Symbols"><br>
+            </form>
+          </div>
+        </section>
+        <footer class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
-        </div>
-      </div>
+        </footer>
+      </main>
     </div>
     <script src="script.js"></script>
   </body>
